--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 				<div class="menu">
 					<ul>
 						<li><a href="#inicio"><strong>Inicio</strong></a></li>
-						<li><a href="#paisajes"><strong>Paisajes</strong></a></li>
-						<li><a href="#retratos"><strong>Retratos</strong></a></li>
+						<li><a href="paisajes.html" target="_blank"><strong>Paisajes</strong></a></li>
+						<li><a href="retratos.html" target="_blank"><strong>Retratos</strong></a></li>
 					</ul>
 				</div>
 		</header>
@@ -28,10 +28,10 @@
 			<section id="contenedor">
 				<div class="imagen_secundaria">
 					<div id="imagen1">
-						<img src="Imagenes/Adventure-Vacations.jpg" href="#paisajes" title="Paisajes">
+						<a href="paisajes.html" target="_blank"><img src="Imagenes/Adventure-Vacations.jpg"  title="Paisajes"></a>
 					</div>
 					<div id="imagen2">
-						<img src="Imagenes/ffe85feb88087d62571eef2cc2d9cfa9.jpg" href="#retratos" title="Retratos" >
+						<a href="retratos.html" target="_blank"><img src="Imagenes/ffe85feb88087d62571eef2cc2d9cfa9.jpg"  title="Retratos" ></a>
 					</div>
 				</div>
 			</section>	
@@ -58,8 +58,8 @@
                     	<li><h3>Redes sociales</h3></li>
 						<li>Comparte en nuestras redes sociales...</li>
 						<li><a href="http://www.facebook.com/aprendiendo" target="_blank" class="icon-facebook">Aprendiendo fotografía en Facebook</a></li>
-						<li class="icon-tweeter"><a href="http://www.twitter.com/aprendiendo" target="_blank">Aprendiendo fotografía en Tweeter</a></li>
-						<li class="icon-googleplus"><a href="http://www.googleplus.com/aprendiendo" target="_blank" >Aprendiendo fotografía en Google +</a>
+						<li ><a href="http://www.twitter.com/aprendiendo" target="_blank" class="icon-tweeter">Aprendiendo fotografía en Tweeter</a></li>
+						<li ><a href="http://www.googleplus.com/aprendiendo" target="_blank" class="icon-googleplus">Aprendiendo fotografía en Google +</a>
 						</li>
 					</ul>
 			</section>
