--- a/paisajes.html
+++ b/paisajes.html
@@ -2,20 +2,20 @@
 <html>
 <head>
 <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
-	<link rel="stylesheet" href="Css/estilos.css">
+	<link rel="stylesheet" href="Css/estilospaisajes.css">
 	<meta charset="utf-8">
 	<title>Paisajes</title>
 </head>
 <body>
-<div>
+<div class="contenido">
 	<div class="cabecera">
 		<header>
 			<h1>Comenzado con la fotografía</h1>
 				<div class="menu">
 					<ul>
-						<li><a href="#inicio"><strong>Inicio</strong></a></li>
+						<li><a href="index.html" target="_blank"><strong>Inicio</strong></a></li>
 						<li><a href="#paisajes"><strong>Paisajes</strong></a></li>
-						<li><a href="#retratos"><strong>Retratos</strong></a></li>
+						<li><a href="retratos.html" target="_blank"><strong>Retratos</strong></a></li>
 					</ul>
 				</div>
 		</header>
@@ -63,8 +63,8 @@
                     	<li><h3>Redes sociales</h3></li>
 						<li>Comparte en nuestras redes sociales...</li>
 						<li><a href="http://www.facebook.com/aprendiendo" target="_blank" class="icon-facebook">Aprendiendo fotografía en Facebook</a></li>
-						<li class="icon-tweeter"><a href="http://www.twitter.com/aprendiendo" target="_blank">Aprendiendo fotografía en Tweeter</a></li>
-						<li class="icon-googleplus"><a href="http://www.googleplus.com/aprendiendo" target="_blank" >Aprendiendo fotografía en Google +</a>
+						<li ><a href="http://www.twitter.com/aprendiendo" target="_blank"class="icon-tweeter">Aprendiendo fotografía en Tweeter</a></li>
+						<li ><a href="http://www.googleplus.com/aprendiendo" target="_blank" class="icon-googleplus">Aprendiendo fotografía en Google +</a>
 						</li>
 					</ul>
 			</section>
