--- a/retratos.html
+++ b/retratos.html
@@ -2,19 +2,19 @@
 <html>
 <head>
 <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
-	<link rel="stylesheet" href="Css/estilos.css">
+	<link rel="stylesheet" href="Css/estilosretratos.css">
 	<meta charset="utf-8">
 	<title>Retratos</title>
 </head>
 <body>
-<div>
+<div class="contenido">
 	<div class="cabecera">
 		<header>
 			<h1>Comenzado con la fotografía</h1>
 				<div class="menu">
 					<ul>
-						<li><a href="#inicio"><strong>Inicio</strong></a></li>
-						<li><a href="#paisajes"><strong>Paisajes</strong></a></li>
+						<li><a href="index.html" target="_blank"><strong>Inicio</strong></a></li>
+						<li><a href="paisajes.html" target="_blank"><strong>Paisajes</strong></a></li>
 						<li><a href="#retratos"><strong>Retratos</strong></a></li>
 					</ul>
 				</div>
@@ -22,7 +22,7 @@
 	</div>
 	<section class="contenedor">
 					<div class="imagen" id="imagen_1">
-						<img src="Imagenes/Retratos/4aea858450f01a7f000d032f7fce362b.jpg" title="Niño Maori" alt="Rostro1">
+						<img src="Imagenes/Retratos/maori.jpg" title="Niño Maori" alt="Rostro1">
 					</div>
 					<div class="imagen" id="imagen_2">
 						<img src="Imagenes/Retratos/1659434a1f836a4acec146e3d6f92d44-45d209e1ce1eee01bb8f1bfa49da85fa.jpg" title="Anciana vietnamita" alt="Rostro2">
@@ -31,13 +31,13 @@
 						<img src="Imagenes/Retratos/a506aed1dc6c42203cb6160dd962890b.jpg" title="Africanas" alt="Rostro3">
 					</div>
 					<div class="imagen" id="imagen_4">
-						<img src="Imagenes/Retratos/bd09a67d36c20244ab8fcd742d3fd07b.jpg" title="Indonesia" alt="Rostro4">
+						<img src="Imagenes/Retratos/balidancer7887.jpg" title="Indonesia" alt="Rostro4">
 					</div>
 					<div class="imagen" id="imagen_5">
 						<img src="Imagenes/Retratos/Osla_zen.jpg" title="Niño afgano" alt="Rostro5">
 					</div>
 					<div class="imagen" id="imagen_6">
-						<img src="Imagenes/Retratos/DAVID-BOWIE.jpg" title="Caucasico" alt="Rostro6">
+						<img src="Imagenes/Retratos/FRENN-Spring-Summer-2016-1.jpg" title="Caucasico" alt="Rostro6">
 					</div>
 	</section>
 	<footer id="footer">
@@ -63,8 +63,8 @@
                     	<li><h3>Redes sociales</h3></li>
 						<li>Comparte en nuestras redes sociales...</li>
 						<li><a href="http://www.facebook.com/aprendiendo" target="_blank" class="icon-facebook">Aprendiendo fotografía en Facebook</a></li>
-						<li class="icon-tweeter"><a href="http://www.twitter.com/aprendiendo" target="_blank">Aprendiendo fotografía en Tweeter</a></li>
-						<li class="icon-googleplus"><a href="http://www.googleplus.com/aprendiendo" target="_blank" >Aprendiendo fotografía en Google +</a>
+						<li ><a href="http://www.twitter.com/aprendiendo" target="_blank"class="icon-tweeter">Aprendiendo fotografía en Tweeter</a></li>
+						<li ><a href="http://www.googleplus.com/aprendiendo" target="_blank" class="icon-googleplus">Aprendiendo fotografía en Google +</a>
 						</li>
 					</ul>
 			</section>
